--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,10 @@ inputs:
     description: 'Path to file to write the kustomize build output to'
     required: false
     default: ''
+  enable_alpha_plugins:
+    description: 'Enable Kustomize plugins'
+    required: false
+    default: ''
 outputs:
   kustomize_build_output:
     description: 'Output of kustomize build'
