Make downloading of kustomize more robust to GitHub API rate limits
Also, introduce `kustomize_install` as a boolean option that can disable
installing kustomize alltogether, assuming you install it some other way,
like with https://github.com/yokawasa/action-setup-kube-tools

Fixes #35

--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,9 @@ inputs:
     description: 'Kustomize version'
     required: true
     default: '3.0.0'
+  kustomize_install:
+    required: false
+    default: '1'
   kustomize_build_dir:
     description: 'Directory to do kustomize build on'
     required: false
